--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -6,10 +6,76 @@ html
       meta[content="text/html; charset=utf-8" http-equiv="Content-Type"]
       = javascript_include_tag "//html5shiv.googlecode.com/svn/trunk/html5.js"
     meta[name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"]
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
-
-  body
-    .container
-      .col-md-8.col-md-offset-2
-        = yield
+    css:
+      #outlook a{
+        padding:0;
+      }
+      html,body{
+        background-color:#736856;
+        font-family:sans-serif;
+      }
+      html{
+        box-sizing:border-box;
+      }
+      *,*:before,*:after{
+        box-sizing:inherit;
+      }
+      body{
+        -webkit-text-size-adjust:none;
+        margin:0;
+        padding:50px 0;
+        width:100% !important;
+      }
+      img{
+        border:none;
+        font-size:14px;
+        font-weight:bold;
+        height:auto;
+        line-height:100%;
+        outline:none;
+        text-decoration:none;
+        text-transform:capitalize;
+      }
+      a{
+        color:#fedc01;
+        text-decoration:none;
+      }
+      table{
+        border-collapse:collapse;
+        border-spacing:0;
+      }
+      td{
+        padding:0;
+        vertical-align:baseline;
+      }
+      .bg{
+        background-color:#736856;
+        height:100%;
+        width:100%;
+      }
+      .container{
+        margin:0 auto;
+        position:relative;
+        width:600px;
+      }
+      .logo{
+        display:block;
+        margin:40px auto 25px;
+      }
+      .content{
+        background-color:#fff;
+        color:#463f32;
+        padding:25px 45px;
+      }
+      .header{
+        background-color:#463f32;
+        color:#e8decd;
+        margin:0;
+        padding:25px 45px;
+      }
+  body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0"
+    .bg
+      .container
+        = link_to image_tag(attachments['logo.png'].url, class: 'logo'), root_url
+        p.content.header = yield :header
+        .content = yield
