--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -1,8 +1,3 @@
-.header {
-  height: 100px;
-  width: 100%;
-  background-color: $brown-tribo;
-}
 
 .header__centered {
   height: 100px;
@@ -33,8 +28,12 @@
 }
 
 .navbar-default {
-  background: transparent;
+  background: $brown-tribo;
+  min-height: 100px;
+  width: 100%;
+  margin-bottom: 0px;
   border: 0;
+  border-radius: 0px;
   z-index: 1000;
 
   .navbar-nav > li:last-child {
